--- a/it/index.html
+++ b/it/index.html
@@ -93,7 +93,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Parco della Pace - Vicenza</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -103,7 +102,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Castellaneta Marina</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -113,7 +111,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Expo 2015 - Milano</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -123,7 +120,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Parco Nazionale Gran Paradiso</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -133,7 +129,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Grand Hotel di San Pellegrino Terme</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -147,30 +142,32 @@
     <div>
       <img src="../library/home/pan-home-chisiamo.jpg">
     </div>
-    <div class="text-elements">
+    <div>
       <h1>Chi siamo</h1>
       <h2><span>P</span>rogetazzione<br><span>A</span>rchitettura <span>+</span><br><span>N</span>atura</h2>
       <p>PAN associati S.R.L. è una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
       <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
       <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
-      <div class="big-separator"></div>
-      <a class="classic-link" href="404">Scopri di <span>+</span></a>
+      <div class="link-box">
+        <a class="classic-link" href="404">Scopri di <span>+</span></a>
+      </div>
     </div>
   </section>
 <!--#2-->
   <section class="split">
-    <div class="text-elements">
+    <div>
       <h1>Cosa facciamo</h1>
       <h2>Le nostre aree di competenza</h2>
       <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
       <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
-      <div class="big-separator"></div>
-      <a class="classic-link" href="404">Rigenerazione spazi urbani&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Parchi e giardini&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Riqualificazione ambientale e paesaggistica&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Inserimento ambientale di infrastrutture&nbsp;&nearr;</a>
-      <a class="classic-link" href="404">Architettura&nbsp;&nearr;</a>
+      <div class="link-box">
+        <a class="classic-link" href="404">Rigenerazione spazi urbani&nbsp;&nearr;</a>
+        <a class="classic-link" href="404">Parchi e giardini&nbsp;&nearr;</a>
+        <a class="classic-link" href="404">Riqualificazione ambientale e paesaggistica&nbsp;&nearr;</a>
+        <a class="classic-link" href="404">Inserimento ambientale di infrastrutture&nbsp;&nearr;</a>
+        <a class="classic-link" href="404">Architettura&nbsp;&nearr;</a>
+      </div>
     </div>
     <div class="slider" id="slider2">
       <div class="slides">
@@ -179,7 +176,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Rigenerazione spazi urbani</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -189,7 +185,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Parchi e giardini</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -199,7 +194,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Riqualificazione ambientale e paesaggistica</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -209,7 +203,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Inserimento ambientale di infrastrutture</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -219,7 +212,6 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Architettura</p>
-                  <div class="small-separator"></div>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -232,19 +224,20 @@
     <div>
       <img src="../library/home/pan-home-lavoraconnoi.jpg">
     </div>
-    <div class="text-elements">
+    <div>
       <h1>Collaborazioni</h1>
       <h2>Hai qualcosa in più?<br>Lavora con noi!</h2>
       <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
       <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
       <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
-      <div class="big-separator"></div>
-      <a class="classic-link" href="404">Scopri di <span>+</span></a>
+      <div class="link-box">
+        <a class="classic-link" href="404">Scopri di <span>+</span></a>
+      </div>
     </div>
   </section>
 <!--#4-->
-  <section class="pop">
-    <div class="text-elements">
+  <section class="footer-prev">
+    <div>
       <h2>News</h2>
       <div class="module">
         <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 53</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
@@ -256,128 +249,27 @@
 </main>
 
 <footer>
-  <img id="head-foot" class="svg-img" src="../elements/pan_associati_ext.svg">
+  <img class="svg-img footer-logo" src="../elements/pan_associati_ext.svg">
   <div class="footer">
     <div>
-      <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
+      <a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a>
     </div>
     <div>
-      <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
+      Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
       <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
-      <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
+      <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a>
     </div>
     <div>
-      <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
+      <a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a>
     </div>
     <div>
-      <a href="https://www.accredia.it/"><img id="accred" class="svg-img" src="../elements/accredia.svg"></a>
-      <a href="https://www.sgs.com/it-it"><img id="accred" class="svg-img" src="../elements/sgs.svg"></a>
+      <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
+      <a href="https://www.sgs.com/it-it"><img class="svg-img accred" src="../elements/sgs.svg"></a>
     </div>
   </div>
-  <div class="mega-separator"></div>
   <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
 </footer>
 
-<script>
-// HEADER MENU NAV
-
-function toggleNav() {
-document.getElementById("burger").classList.toggle("change");
-document.getElementById("mySidenav").classList.toggle("open");
-}
-function toggleSubNav() {
- document.getElementById("subNavLinks").classList.toggle("show");
-}
-
-//DESKTOP MENU
-
-function toggleMenu(menuId, event) {
-event.preventDefault(); // Prevents the default behavior of the link
-var menu = document.getElementById(menuId);
-if (menu.style.display === "block") {
-  menu.style.display = "none";
-} else {
-  menu.style.display = "block";
-}
-}
-
-// DARK MODE
-
-document.addEventListener('DOMContentLoaded', function() {
-const darkModeToggle = document.getElementById('darkModeToggle');
-// Check if dark mode preference is stored in local storage
-const isDarkMode = localStorage.getItem('darkMode') === 'true';
-// Set initial dark mode state based on local storage
-if (isDarkMode) {
-document.body.classList.add('dark-mode');
-darkModeToggle.checked = true;
-}
-// Toggle dark mode function
-function toggleDarkMode() {
-const isDarkMode = document.body.classList.contains('dark-mode');
-localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
-document.body.classList.toggle('dark-mode');
-}
-// Event listener for dark mode toggle switch
-darkModeToggle.addEventListener('change', toggleDarkMode);
-});
-
-// SECTION SHOWER
-
-const sections = document.querySelectorAll('.toggleable-section');
-const buttons = document.querySelectorAll('.showSectionButton');
-// Show section0 when the page loads
-document.getElementById('section0').classList.remove('hidden');
-// Add event listener to each button
-buttons.forEach(button => {
-button.addEventListener('click', function() {
-const sectionId = button.getAttribute('data-section-id');
-// Hide all toggleable sections
-sections.forEach(section => {
-section.classList.add('hidden');
-});
-// Show the corresponding section
-document.getElementById(sectionId).classList.remove('hidden');
-});
-});
-
-//SLIDESHOWS
-
-function initializeSlider(sliderId) {
-let currentIndex = 0;
-const slides = document.querySelectorAll(`#${sliderId} .slide`);
-const totalSlides = slides.length;
-let slideWidth = slides[0].clientWidth;
-const slider = document.querySelector(`#${sliderId} .slides`);
-function nextSlide() {
-currentIndex = (currentIndex + 1) % totalSlides;
-updateSlider();
-}
-function updateSlider() {
-const offset = -currentIndex * slideWidth;
-slider.style.transition = 'transform 2s ease';
-slider.style.transform = `translateX(${offset}px)`;
-}
-setInterval(nextSlide, 6000); // Auto slide every 6 seconds
-// Function to update slide widths based on window size
-function updateSlideWidths() {
-slideWidth = slides[0].clientWidth;
-const offset = -currentIndex * slideWidth;
-slider.style.transition = 'none';
-slider.style.transform = `translateX(${offset}px)`;
-setTimeout(() => {
-slider.style.transition = '';
-});
-}
-// Update slide widths when window is resized
-window.addEventListener('resize', updateSlideWidths);
-// Call the function once on page load to set initial slide widths
-updateSlideWidths();
-}
-// Initialize sliders
-initializeSlider('slider1');
-initializeSlider('slider2');
-</script>
-
+<script src="../script-home.js"></script>
 </body>
 </html>
