--- a/it/404.html
+++ b/it/404.html
@@ -83,11 +83,16 @@
   <p>&#x263D;</p>
 </div>
 
-<main class="direct-content">
+<main>
+<!--#0-->
+  <section class="accueil-page">
+    <img src="../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+  </section>
+<!--#1-->
   <section class="mono">
       <h2>Il nostro sito è attualmente<br>in costruzione</h2>
       <p>Ci scusiamo per il disagio...<br>Tieniti informato e vieni a trovarci di tanto in tanto per vedere se è cambiato qualcosa ;)</p>
-      <div class="link-box">
+      <div class="box">
         <a href="index" class="classic-link">Ritorna a la home</a>
       </div>
   </section>
