--- a/it/contatti.html
+++ b/it/contatti.html
@@ -83,7 +83,12 @@
   <p>&#x263D;</p>
 </div>
 
-<main class="direct-content">
+<main>
+<!--#0-->
+  <section class="accueil-page">
+    <img src="../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+  </section>
+<!--#1-->
   <section class="mono">
       <h2>Contatti</h2>
       <p>Siamo entusiasti di avere l'opportunità di connetterci con te. Qui, crediamo che ogni contatto sia una potenziale occasione di collaborazione e crescita reciproca.</p>
@@ -98,7 +103,7 @@
   <section class="mono">
       <h2>Hai qualcosa in più?</h2>
       <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
-      <div class="link-box">
+      <div class="box">
         <button class="showSectionButton" data-section-id="section0">Candidatura spontanea</button>
         <button class="showSectionButton" data-section-id="section1">Architetto del paesaggio</button>
         <button class="showSectionButton" data-section-id="section2">Lavoro 2</button>
@@ -121,7 +126,6 @@
       <li>Buone capacità di ideazione del concept progettuale.</li>
       <li>Elaborazione grafica e testuale per le diverse fasi di progetto.</li>
       </ul>
-
       <h1>Qualifiche</h1>
       <ul class="list">
       <li>Laurea in Architettura o Architettura del Paesaggio.</li>
