--- a/it/index.html
+++ b/it/index.html
@@ -148,7 +148,7 @@
       <p>PAN associati S.R.L. è una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
       <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
       <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
-      <div class="link-box">
+      <div class="box">
         <a class="classic-link" href="404">Scopri di <span>+</span></a>
       </div>
     </div>
@@ -161,7 +161,7 @@
       <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
       <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
-      <div class="link-box">
+      <div class="box">
         <a class="classic-link" href="404">Rigenerazione spazi urbani&nbsp;&nearr;</a>
         <a class="classic-link" href="404">Parchi e giardini&nbsp;&nearr;</a>
         <a class="classic-link" href="404">Riqualificazione ambientale e paesaggistica&nbsp;&nearr;</a>
@@ -230,7 +230,7 @@
       <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
       <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
       <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
-      <div class="link-box">
+      <div class="box">
         <a class="classic-link" href="404">Scopri di <span>+</span></a>
       </div>
     </div>
