--- a/it/news.html
+++ b/it/news.html
@@ -83,12 +83,16 @@
   <p>&#x263D;</p>
 </div>
 
-<main class="direct-content">
+<main>
+<!--#0-->
+  <section class="accueil-page">
+    <img src="../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+  </section>
 <!--#1-->
   <section class="mono">
       <h2>News</h2>
       <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="link-box">
+      <div class="box">
         <button class="showSectionButton" data-section-id="section0">Tutte le news</button>
         <button class="showSectionButton" data-section-id="section1">Eventi</button>
         <button class="showSectionButton" data-section-id="section2">Pubblicazioni</button>
@@ -101,7 +105,7 @@
       <h1>Pubblicazione</h1>
       <h3>Top Scape Paysage n° 53</h3>
       <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="link-box">
+      <div class="box">
         <a href="404" class="classic-link">Scopri di <span>+</span></a>
       </div>
   </section>
