--- a/it/privacy.html
+++ b/it/privacy.html
@@ -83,7 +83,12 @@
   <p>&#x263D;</p>
 </div>
 
-<main class="direct-content">
+<main>
+<!--#0-->
+  <section class="accueil-page">
+    <img src="../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+  </section>
+<!--#1-->
   <section class="mono">
       <h2>Privacy and Cookie Policy</h2>
       <p>Grazie per aver visitato panassociati.net. Rispettiamo la tua privacy e ci impegniamo a proteggere qualsiasi informazione tu possa fornire durante l'utilizzo del nostro sito web.</p>
@@ -97,7 +102,7 @@
       <br>Ci riserviamo il diritto di aggiornare o modificare la nostra informativa sulla privacy in qualsiasi momento. Eventuali modifiche saranno pubblicate su questa pagina.</p>
       <p>Contattaci:
       <br>Se hai domande sulla nostra informativa sulla privacy, ti preghiamo di contattarci al seguente indirizzo: <a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>.</p>
-      <div class="link-box">
+      <div class="box">
         <a href="index" class="classic-link">Ritorna a la home</a>
       </div>
   </section>
