--- a/it/studio.html
+++ b/it/studio.html
@@ -83,7 +83,11 @@
   <p>&#x263D;</p>
 </div>
 
-<main class="direct-content">
+<main>
+<!--#0-->
+  <section class="accueil-page">
+    <img src="../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+  </section>
 <!--#1-->
   <section class="mono">
     <div>
@@ -94,7 +98,7 @@
     </div>
   </section>
 <!--#2-->
-  <section>
+  <section class="mono">
     <div>
       <h2>Team</h2>
       <div class="container">
