--- a/it/studio.html
+++ b/it/studio.html
@@ -90,16 +90,13 @@
   </section>
 <!--#1-->
   <section class="mono">
-    <div>
       <h2>Studio</h2>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
       <p>Vestibulum consequat ipsum mi, semper mollis augue vulputate sit amet. Aenean feugiat eget arcu sed euismod. Fusce ac consequat justo. Aliquam egestas tortor et vulputate molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec tristique rhoncus lacinia. Duis eleifend, dui vel iaculis tincidunt, ex diam tristique purus, quis efficitur velit libero ac orci. Morbi ultrices molestie lacus, vitae varius nisi tempor ac.</p>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
-    </div>
   </section>
 <!--#2-->
   <section class="mono">
-    <div>
       <h2>Team</h2>
       <div class="container">
         <div class="item">
@@ -153,11 +150,9 @@
           <p class="note">Interior and Spatial Designer </p>
         </div>
       </div>
-    </div>
   </section>
 <!--#3-->
   <section class="mono">
-    <div>
       <h2>Hanno lavorato con noi</h2>
       <div id="list">
         <p class="note">Raffaele Selleri</p>
@@ -205,7 +200,41 @@
         <p class="note">Viola Corbari</p>
         <p class="note">Alessio Carlini</p>
       </div>
-    </div>
+  </section>
+<!--#4-->
+  <section class="footer-prev">
+      <div class="partners-wall">
+        <img class="svg-img partner" src="../library/studio/partners/01.svg">
+        <img class="svg-img partner" src="../library/studio/partners/02.svg">
+        <img class="svg-img partner" src="../library/studio/partners/03.svg">
+        <img class="svg-img partner" src="../library/studio/partners/04.svg">
+        <img class="svg-img partner" src="../library/studio/partners/05.svg">
+        <img class="svg-img partner" src="../library/studio/partners/06.svg">
+        <img class="svg-img partner" src="../library/studio/partners/07.svg">
+        <img class="svg-img partner" src="../library/studio/partners/08.svg">
+        <img class="svg-img partner" src="../library/studio/partners/09.svg">
+        <img class="svg-img partner" src="../library/studio/partners/10.svg">
+        <img class="svg-img partner" src="../library/studio/partners/11.svg">
+        <img class="svg-img partner" src="../library/studio/partners/12.svg">
+        <img class="svg-img partner" src="../library/studio/partners/13.svg">
+        <img class="svg-img partner" src="../library/studio/partners/14.svg">
+        <img class="svg-img partner" src="../library/studio/partners/15.svg">
+        <img class="svg-img partner" src="../library/studio/partners/01.svg">
+        <img class="svg-img partner" src="../library/studio/partners/02.svg">
+        <img class="svg-img partner" src="../library/studio/partners/03.svg">
+        <img class="svg-img partner" src="../library/studio/partners/04.svg">
+        <img class="svg-img partner" src="../library/studio/partners/05.svg">
+        <img class="svg-img partner" src="../library/studio/partners/06.svg">
+        <img class="svg-img partner" src="../library/studio/partners/07.svg">
+        <img class="svg-img partner" src="../library/studio/partners/08.svg">
+        <img class="svg-img partner" src="../library/studio/partners/09.svg">
+        <img class="svg-img partner" src="../library/studio/partners/10.svg">
+        <img class="svg-img partner" src="../library/studio/partners/11.svg">
+        <img class="svg-img partner" src="../library/studio/partners/12.svg">
+        <img class="svg-img partner" src="../library/studio/partners/13.svg">
+        <img class="svg-img partner" src="../library/studio/partners/14.svg">
+        <img class="svg-img partner" src="../library/studio/partners/15.svg">
+      </div>
   </section>
 </main>
 
