--- a/it/contatti.html
+++ b/it/contatti.html
@@ -101,19 +101,18 @@
   </section>
 <!--#2-->
   <section class="mono">
-      <h2>Hai qualcosa in più?</h2>
+    <div class="box">
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.915429844313!2d9.22706047663193!3d45.51178103026217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c76cb54d5f97%3A0xe5e7c5305b456d6b!2sVia%20Don%20Carlo%20Porro%2C%206%2C%2020128%20Milano%20MI%2C%20Italie!5e0!3m2!1sfr!2sbe!4v1711440146140!5m2!1sfr!2sbe" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </section>
+<!--#3-->
+  <section class="mono">
+      <h2>Lavora con noi</h2>
       <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
       <div class="box">
-        <button class="showSectionButton" data-section-id="section0">Candidatura spontanea</button>
         <button class="showSectionButton" data-section-id="section1">Architetto del paesaggio</button>
         <button class="showSectionButton" data-section-id="section2">Lavoro 2</button>
       </div>
-  </section>
-<!--#3-->
-  <section id="section0" class="mono toggleable-section hidden">
-      <h3>Candidatura spontanea</h3>
-      <h1>Responsabilità</h1>
-      <p>PA+N Associati accoglie con favore candidature spontanee da individui determinati e qualificati che desiderano contribuire al nostro impegno nell'architettura e la progettazione. Se ritenete di possedere le competenze e l'entusiasmo necessari per unirvi a noi in questa missione, vi invitiamo cortesemente a inviare la vostra candidatura. Siamo costantemente alla ricerca di professionisti motivati, pronti a condividere la nostra visione e a contribuire al successo dell'azienda con impegno e dedizione.</p>
   </section>
 <!--#4-->
   <section id="section1" class="mono toggleable-section hidden">
@@ -136,7 +135,7 @@
       <li>Buone capacità comunicative e di presentazione.</li>
       </ul>
   </section>
-<!--#5-->
+<!--#4-->
   <section class="mono">
       <h1>Scrivici!</h1>
       <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?><!--" method="post">-->
@@ -166,6 +165,9 @@
     </div>
     <div>
       <a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a>
+    </div>
+    <div>
+      Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.
     </div>
     <div>
       <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
