--- a/it/index.html
+++ b/it/index.html
@@ -89,7 +89,7 @@
     <div class="slider" id="slider1">
       <div class="slides">
         <div class="slide">
-          <img src="../library/home/pan-home-vicenza.jpg" alt="Parco della Pace - Vicenza">
+          <img src="../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
             <div class="overlay">
                 <div class="quote">
                   <p>Parco della Pace - Vicenza</p>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="slide">
-            <img src="../library/home/pan-home-expo-milano.jpg" alt="Expo 2015 - Milano">
+            <img src="../library/home/pan-home-expo-milano-2.jpg" alt="Expo 2015 - Milano">
             <div class="overlay">
                 <div class="quote">
                   <p>Expo 2015 - Milano</p>
@@ -129,6 +129,15 @@
             <div class="overlay">
                 <div class="quote">
                   <p>Grand Hotel di San Pellegrino Terme</p>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
+                </div>
+            </div>
+        </div>
+        <div class="slide">
+            <img src="../library/home/pan-home-expo-milano-3.jpg" alt="Expo 2015 - Milano">
+            <div class="overlay">
+                <div class="quote">
+                  <p>Expo 2015 - Milano</p>
                   <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
@@ -237,6 +246,7 @@
   </section>
 <!--#4-->
   <section class="footer-prev">
+    <h2>News</h2>
       <div class="module">
         <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 53</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
         <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Rivista Industria delle costruzioni n°493</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
@@ -258,6 +268,9 @@
     </div>
     <div>
       <a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a>
+    </div>
+    <div>
+      Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.
     </div>
     <div>
       <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
