--- a/it/studio.html
+++ b/it/studio.html
@@ -203,6 +203,7 @@
   </section>
 <!--#4-->
   <section class="footer-prev">
+    <h2>Clients & Partners</h2>
       <div class="partners-wall">
         <img class="svg-img partner" src="../library/studio/partners/01.svg">
         <img class="svg-img partner" src="../library/studio/partners/02.svg">
@@ -251,6 +252,9 @@
     </div>
     <div>
       <a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a>
+    </div>
+    <div>
+      Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.
     </div>
     <div>
       <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
