--- a/it/studio.html
+++ b/it/studio.html
@@ -205,36 +205,20 @@
   <section class="footer-prev">
     <h2>Clients & Partners</h2>
       <div class="partners-wall">
-        <img class="svg-img partner" src="../library/studio/partners/01.svg">
-        <img class="svg-img partner" src="../library/studio/partners/02.svg">
-        <img class="svg-img partner" src="../library/studio/partners/03.svg">
-        <img class="svg-img partner" src="../library/studio/partners/04.svg">
-        <img class="svg-img partner" src="../library/studio/partners/05.svg">
-        <img class="svg-img partner" src="../library/studio/partners/06.svg">
-        <img class="svg-img partner" src="../library/studio/partners/07.svg">
-        <img class="svg-img partner" src="../library/studio/partners/08.svg">
-        <img class="svg-img partner" src="../library/studio/partners/09.svg">
-        <img class="svg-img partner" src="../library/studio/partners/10.svg">
-        <img class="svg-img partner" src="../library/studio/partners/11.svg">
-        <img class="svg-img partner" src="../library/studio/partners/12.svg">
-        <img class="svg-img partner" src="../library/studio/partners/13.svg">
-        <img class="svg-img partner" src="../library/studio/partners/14.svg">
-        <img class="svg-img partner" src="../library/studio/partners/15.svg">
-        <img class="svg-img partner" src="../library/studio/partners/01.svg">
-        <img class="svg-img partner" src="../library/studio/partners/02.svg">
-        <img class="svg-img partner" src="../library/studio/partners/03.svg">
-        <img class="svg-img partner" src="../library/studio/partners/04.svg">
-        <img class="svg-img partner" src="../library/studio/partners/05.svg">
-        <img class="svg-img partner" src="../library/studio/partners/06.svg">
-        <img class="svg-img partner" src="../library/studio/partners/07.svg">
-        <img class="svg-img partner" src="../library/studio/partners/08.svg">
-        <img class="svg-img partner" src="../library/studio/partners/09.svg">
-        <img class="svg-img partner" src="../library/studio/partners/10.svg">
-        <img class="svg-img partner" src="../library/studio/partners/11.svg">
-        <img class="svg-img partner" src="../library/studio/partners/12.svg">
-        <img class="svg-img partner" src="../library/studio/partners/13.svg">
-        <img class="svg-img partner" src="../library/studio/partners/14.svg">
-        <img class="svg-img partner" src="../library/studio/partners/15.svg">
+        <a href="https://milanotangenziali.it/"><img class="svg-img partner" src="../library/studio/partners/01.svg"></a>
+        <a href="https://mmspa.eu/"><img class="svg-img partner" src="../library/studio/partners/02.svg"></a>
+        <a href="https://go-fit.it/"><img class="svg-img partner" src="../library/studio/partners/03.svg"></a>
+        <a href="https://www.fondazionefieramilano.it/it/index.html"><img class="svg-img partner" src="../library/studio/partners/04.svg"></a>
+        <a href="https://www.ferrovienord.it/"><img class="svg-img partner" src="../library/studio/partners/05.svg"></a>
+        <a href="https://www.csvlombardia.it/milano/"><img class="svg-img partner" src="../library/studio/partners/06.svg"></a>
+        <a href="https://www.comune.vicenza.it/"><img class="svg-img partner" src="../library/studio/partners/07.svg"></a>
+        <a href="https://www.comune.taranto.it/"><img class="svg-img partner" src="../library/studio/partners/08.svg"></a>
+        <a href="https://www.comune.milano.it/"><img class="svg-img partner" src="../library/studio/partners/09.svg"></a>
+        <a href="https://comune.messina.it/it"><img class="svg-img partner" src="../library/studio/partners/10.svg"></a>
+        <a href="https://www.comune.alessandria.it/homepage"><img class="svg-img partner" src="../library/studio/partners/11.svg"></a>
+        <a href="https://www.brianzacque.it/"><img class="svg-img partner" src="../library/studio/partners/12.svg"></a>
+        <a href="https://www.bmsprogetti.it/it/"><img class="svg-img partner" src="../library/studio/partners/13.svg"></a>
+        <a href="https://barrecaelavarra.com/"><img class="svg-img partner" src="../library/studio/partners/14.svg"></a>
       </div>
   </section>
 </main>
