--- a/it/news.html
+++ b/it/news.html
@@ -93,17 +93,35 @@
       <h2>News</h2>
       <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
       <div class="box">
-        <button class="showSectionButton" data-section-id="section0">Tutte le news</button>
-        <button class="showSectionButton" data-section-id="section1">Eventi</button>
-        <button class="showSectionButton" data-section-id="section2">Pubblicazioni</button>
-        <button class="showSectionButton" data-section-id="section3">Articoli</button>
-        <button class="showSectionButton" data-section-id="section4">Premi</button>
+        <button class="show-all-btn showSectionButton">Tutte le news</button>
+        <button class="filter-btn showSectionButton" data-filter="section1">Eventi</button>
+        <button class="filter-btn showSectionButton" data-filter="section2">Pubblicazioni</button>
+        <button class="filter-btn showSectionButton" data-filter="section3">Articoli</button>
+        <button class="filter-btn showSectionButton" data-filter="section3">Premi</button>
       </div>
   </section>
 <!--#2-->
-  <section id="section0" class="mono toggleable-section hidden">
+  <section class="mono news-section section2">
       <h1>Pubblicazione</h1>
       <h3>Top Scape Paysage n° 53</h3>
+      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
+      <div class="box">
+        <a href="404" class="classic-link">Scopri di <span>+</span></a>
+      </div>
+  </section>
+<!--#3-->
+  <section class="mono news-section section2">
+      <h1>Pubblicazione</h1>
+      <h3>Rivista Industria delle costruzioni n°493</h3>
+      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
+      <div class="box">
+        <a href="404" class="classic-link">Scopri di <span>+</span></a>
+      </div>
+  </section>
+<!--#4-->
+  <section class="mono news-section section2">
+      <h1>Pubblicazione</h1>
+      <h3>Top Scape Paysage n° 46</h3>
       <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
       <div class="box">
         <a href="404" class="classic-link">Scopri di <span>+</span></a>
